# ari-API-IA-textonly

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  main.py  schemas.py
app/api/: ari_handler.py  prompts_router.py  testing_router.py  tools_router.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  prompt.py  tool.py
app/services/: ai_service.py  redis_service.py  tool_executor.py
app/static/css/: style.css
app/templates/: base.html  index.html
app/templates/prompts/: create_or_edit.html  list.html
app/templates/testing/: test_prompt.html
app/templates/tools/: create_or_edit.html  list.html
docs/: 01_configuration_variables.md  02_project_structure.md  index.md
docs/modules/: README.md  ai_service.md  ari_handler.md  config.md  crud.md  database.md  main_app.md  models.md  routers_prompts.md  routers_testing.md  routers_tools.md  schemas.md  tool_executor.md
tests/: conftest.py
tests/api/: test_ari_handler.py  test_prompts_api.py  test_tools_api.py
tests/core/: test_security.py
tests/crud/: test_crud_prompts.py  test_crud_tools.py
tests/services/: test_ai_service.py  test_redis_service.py  test_tool_executor.py
